// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`precision set François Ruffin > mesure la frontière d'acceptation recalibrée sans modifier les annotations 1`] = `
{
  "acceptanceGuards": {
    "DEPENDENT_FRAGMENT": 4,
    "DESCRIPTIVE_EXISTING_POLICY": 2,
    "GENERAL_INTENT_FORMULATION": 1,
    "HISTORICAL_REFERENCE": 1,
    "INSUFFICIENT_ATTRIBUTION": 1,
    "RHETORICAL_FORMULATION": 6,
    "SLOGAN_OR_PRINCIPLE": 8,
    "TITLE_OR_NOMINAL_LABEL": 5,
  },
  "metrics": {
    "accepted": 69,
    "byClassification": {
      "MEASURE": {
        "accepted": 51,
        "falsePositives": 0,
        "precision": 1,
        "semanticMatches": 40,
        "semanticMismatches": 11,
        "truePositives": 51,
      },
      "OBJECTIVE": {
        "accepted": 18,
        "falsePositives": 0,
        "precision": 1,
        "semanticMatches": 18,
        "semanticMismatches": 0,
        "truePositives": 18,
      },
    },
    "confusion": {
      "ACCEPT_MEASURE": {
        "MEASURE": 47,
        "OBJECTIVE": 0,
        "OTHER": 4,
      },
      "ACCEPT_OBJECTIVE": {
        "MEASURE": 12,
        "OBJECTIVE": 18,
        "OTHER": 0,
      },
      "REJECT": {
        "MEASURE": 31,
        "OBJECTIVE": 2,
        "OTHER": 6,
      },
    },
    "falseNegatives": {
      "ACCEPT_MEASURE": [
        "precalibration-loisirs-74",
        "precalibration-loisirs-94",
        "precalibration-loisirs-105",
        "precalibration-loisirs-132",
        "calibrated-rejected-79",
        "calibrated-rejected-82",
        "calibrated-rejected-88",
        "calibrated-rejected-89",
        "calibrated-rejected-90",
        "calibrated-rejected-91",
        "calibrated-rejected-116",
      ],
      "ACCEPT_OBJECTIVE": [
        "calibrated-accepted-46",
      ],
    },
    "falsePositiveIds": [],
    "falsePositives": 0,
    "falsePositivesByCause": {},
    "humanDistribution": {
      "ACCEPT_MEASURE": 51,
      "ACCEPT_OBJECTIVE": 30,
      "REJECT": 39,
    },
    "precision": 1,
    "sampleSize": 120,
    "truePositives": 69,
  },
}
`;

exports[`precision set François Ruffin > mesure séparément precision, confusion et faux négatifs 1`] = `
{
  "accepted": 95,
  "byClassification": {
    "MEASURE": {
      "accepted": 77,
      "falsePositives": 25,
      "precision": 0.6753246753246753,
      "semanticMatches": 40,
      "semanticMismatches": 12,
      "truePositives": 52,
    },
    "OBJECTIVE": {
      "accepted": 18,
      "falsePositives": 2,
      "precision": 0.8888888888888888,
      "semanticMatches": 16,
      "semanticMismatches": 0,
      "truePositives": 16,
    },
  },
  "confusion": {
    "ACCEPT_MEASURE": {
      "MEASURE": 47,
      "OBJECTIVE": 0,
      "OTHER": 4,
    },
    "ACCEPT_OBJECTIVE": {
      "MEASURE": 12,
      "OBJECTIVE": 18,
      "OTHER": 0,
    },
    "REJECT": {
      "MEASURE": 31,
      "OBJECTIVE": 2,
      "OTHER": 6,
    },
  },
  "falseNegatives": {
    "ACCEPT_MEASURE": [
      "precalibration-loisirs-74",
      "precalibration-loisirs-94",
      "precalibration-loisirs-105",
      "precalibration-loisirs-132",
      "calibrated-rejected-79",
      "calibrated-rejected-82",
      "calibrated-rejected-88",
      "calibrated-rejected-89",
      "calibrated-rejected-90",
      "calibrated-rejected-91",
      "calibrated-rejected-116",
    ],
    "ACCEPT_OBJECTIVE": [
      "calibrated-rejected-127",
      "calibrated-rejected-327",
    ],
  },
  "falsePositiveIds": [
    "calibrated-accepted-0",
    "calibrated-accepted-1",
    "calibrated-accepted-3",
    "calibrated-accepted-4",
    "calibrated-accepted-5",
    "calibrated-accepted-8",
    "calibrated-accepted-9",
    "calibrated-accepted-10",
    "calibrated-accepted-11",
    "calibrated-accepted-23",
    "calibrated-accepted-32",
    "calibrated-accepted-33",
    "calibrated-accepted-37",
    "calibrated-accepted-38",
    "calibrated-accepted-39",
    "calibrated-accepted-40",
    "calibrated-accepted-41",
    "calibrated-accepted-47",
    "calibrated-accepted-48",
    "calibrated-accepted-50",
    "calibrated-accepted-51",
    "calibrated-accepted-52",
    "calibrated-accepted-53",
    "calibrated-accepted-54",
    "calibrated-accepted-59",
    "calibrated-accepted-94",
    "calibrated-accepted-95",
  ],
  "falsePositives": 27,
  "falsePositivesByCause": {
    "EXISTING_POLICY_DESCRIPTION": 2,
    "GENERAL_INTENT": 4,
    "HISTORICAL_ACTION": 1,
    "INSUFFICIENT_ATTRIBUTION": 2,
    "RHETORICAL_FORMULATION": 3,
    "SLOGAN": 8,
    "THIRD_PARTY_PROPOSAL": 1,
    "TITLE_ONLY": 6,
  },
  "humanDistribution": {
    "ACCEPT_MEASURE": 51,
    "ACCEPT_OBJECTIVE": 30,
    "REJECT": 39,
  },
  "precision": 0.7157894736842105,
  "sampleSize": 120,
  "truePositives": 68,
}
`;
